<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_view_with_one_child"
        android:onClick="listViewOne"
        android:layout_marginBottom="20dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_view_with_two_child"
        android:onClick="listViewTwo"
        android:layout_marginBottom="20dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_view_with_left"
        android:onClick="gridViewLeft"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_view_with_right"
        android:onClick="gridViewRight"
        android:layout_marginBottom="20dp" />

</LinearLayout>
