<?xml version="1.0" encoding="utf-8"?>

<com.example.swipethis.SwipeThis xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_gravity="center_vertical"
    app:From="left">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:text="@string/edit"
            app:srcCompat="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:text="@string/delete"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Surjit Singh" />

    </LinearLayout>
</com.example.swipethis.SwipeThis>